<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E4F3D">



    <LinearLayout
        android:id="@+id/logo_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    </LinearLayout>


    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>


    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_accoun_circle"
        android:contentDescription="@null"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <LinearLayout
        android:id="@+id/student_info_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_white_card"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:textColor="#2E4F3D"/>

        <TextView
            android:id="@+id/student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:textColor="#2E4F3D"/>

        <TextView
            android:id="@+id/student_gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:textColor="#2E4F3D"/>

        <TextView
            android:id="@+id/student_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:textColor="#2E4F3D"/>
    </LinearLayout>


    <Button
        android:id="@+id/courses_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        android:textColor="#2E4F3D"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:textSize="18sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/student_info_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="#2E4F3D"
        android:backgroundTint="@color/white"
        android:elevation="4dp"
        android:textSize="18sp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/courses_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
